


v0.12 (β) - 2016-xx-xx
======================
-



v0.11 (β) - 2016-02-22
======================
- Status page/alerts when features are disabled/unavailable (#45).
- Integrate Travis CI (#48).
- Testing coverage (#38).
- Implement automatic backups & Dropbox cloud storage (#44).
- Link code coverage service to repository (#56).
- Explore timezone.localtime() as replacement for datetime.astimezone() (#50).
- Align GasConsumption.read_at to represent the start of hour (#40).



v0.10 (β) - 2016-02-15
======================
- Cleanup unused static files (#47).
- Investigated mysql_tzinfo_to_sql — Load the Time Zone Tables (#35).
- Make additional DSMR data optional (#46).
- Localize graph x-axis (#42).
- Added graph formatting string to gettext file (#42).
- Different colors for peak & off-peak electricity (#52).
- Admin: Note widget (#51).
- Allow GUI to run without data (#26).



v0.9 (β) - 2016-02-08
=====================
- Moved project to GitHub (#28).
- Added stdout to dsmr_backend to reflect progress.
- Restore note usage in GUI (#39).



v0.8 (β) - 2016-02-06
=====================
- Store daily, weekly, monthly and yearly statistics (#3).
- Improved Recent History page performance a bit. (as result of #3)
- Updates ChartJS library tot 1.1, disposing django-chartjs plugin. Labels finally work! (as result of #3)
- Added trends page. (as result of #3)



v0.7 (β) - 2016-02-04
=====================
- Recent history setting: set range (#29).
- Mock required for test: dsmr_weather.test_weather_tracking (#32).



v0.6 (β) - 2016-02-03
=====================
- Massive refactoring: Separating apps & using signals (#19).
- README update: Exit character for cu (#27, by Jeroen Peters).
- Fixed untranslated strings in admin interface.
- Upgraded Django to 1.8.9.



v0.5 (β) - 2016-01-16
=====================
- First stable release.