@@ -236,11 +236,11 @@
 	   					data: {{ chart.electricity2_returned|safe }},
 	   					label: "{% trans 'Electricity 1 returned (peak)' %}",	       				
 	   					fillColor: "rgba(255,255,255,0.2)",
-	   					strokeColor: "rgba(65,218,102,1)",
-	   					pointColor: "rgba(65,218,102,1)",
+	   					strokeColor: "rgba(200,200,100,1)",
+	   					pointColor: "rgba(200,200,100,1)",
 	   					pointStrokeColor: "#fff",
 	   					pointHighlightFill: "#fff",
-	   					pointHighlightStroke: "rgba(65,218,102,1)"
+	   					pointHighlightStroke: "rgba(200,200,100,1)"
 	   				}]
 	   			};
 	
