@@ -27,12 +27,12 @@
                         </tr>
                         <tr{% if not datalogger_settings.track %} class="alert alert-danger"{% endif %}>
                             <td>{% model_meta_info datalogger_settings 'track' 'verbose_name' %}</td>
-                            <td>{{ datalogger_settings.track|yesno }}</td>
+                            <td>{% if datalogger_settings.track %}<i class="fa fa-check"></i>{% else %}<i class="fa fa-times"></i>{% endif %}</td>
                             <td>{% model_meta_info datalogger_settings 'track' 'help_text' %}</td>
                         </tr>
                         <tr>
                             <td>{% model_meta_info datalogger_settings 'track_meter_statistics' 'verbose_name' %}</td>
-                            <td>{{ datalogger_settings.track_meter_statistics|yesno }}</td>
+                            <td>{% if datalogger_settings.track_meter_statistics %}<i class="fa fa-check"></i>{% else %}<i class="fa fa-times"></i>{% endif %}</td>
                             <td>{% model_meta_info datalogger_settings 'track_meter_statistics' 'help_text' %}</td>
                         </tr>
                         <tr>
@@ -68,12 +68,12 @@
                         </tr>
                         <tr{% if not backup_settings.daily_backup %} class="alert alert-danger"{% endif %}>
                             <td>{% model_meta_info backup_settings 'daily_backup' 'verbose_name' %}</td>
-                            <td>{{ backup_settings.daily_backup|yesno }}</td>
+                            <td>{% if backup_settings.daily_backup %}<i class="fa fa-check"></i>{% else %}<i class="fa fa-times"></i>{% endif %}</td>
                             <td>{% model_meta_info backup_settings 'daily_backup' 'help_text' %}</td>
                         </tr>
                         <tr>
                             <td>{% model_meta_info backup_settings 'compress' 'verbose_name' %}</td>
-                            <td>{{ backup_settings.compress|yesno }}</td>
+                            <td>{% if backup_settings.compress %}<i class="fa fa-check"></i>{% else %}<i class="fa fa-times"></i>{% endif %}</td>
                             <td>{% model_meta_info backup_settings 'compress' 'help_text' %}</td>
                         </tr>
                         <tr>
@@ -109,7 +109,7 @@
                         </tr>
                         <tr{% if not stats_settings.track %} class="alert alert-warning"{% endif %}>
                             <td>{% model_meta_info stats_settings 'track' 'verbose_name' %}</td>
-                            <td>{{ stats_settings.track|yesno }}</td>
+                            <td>{% if stats_settings.track %}<i class="fa fa-check"></i>{% else %}<i class="fa fa-times"></i>{% endif %}</td>
                             <td>{% model_meta_info stats_settings 'track' 'help_text' %}</td>
                         </tr>
                     </table>
@@ -161,7 +161,7 @@
                         </tr>
                         <tr>
                             <td>{% model_meta_info frontend_settings 'reverse_dashboard_graphs' 'verbose_name' %}</td>
-                            <td>{{ frontend_settings.reverse_dashboard_graphs|yesno }}</td>
+                            <td>{% if frontend_settings.reverse_dashboard_graphs %}<i class="fa fa-check"></i>{% else %}<i class="fa fa-times"></i>{% endif %}</td>
                             <td>{% model_meta_info frontend_settings 'reverse_dashboard_graphs' 'help_text' %}</td>
                         </tr>
                         <tr>
@@ -192,7 +192,7 @@
                         </tr>
                         <tr{% if not dropbox_settings.access_token %} class="alert alert-warning"{% endif %}>
                             <td>{% model_meta_info dropbox_settings 'access_token' 'verbose_name' %}</td>
-                            <td>{{ dropbox_settings.access_token|yesno:'yes,-' }}</td>
+                            <td>{% if dropbox_settings.access_token %}<i class="fa fa-check"></i>{% else %}<i class="fa fa-times"></i>{% endif %}</td>
                             <td>{% model_meta_info dropbox_settings 'access_token' 'help_text' %}</td>
                         </tr>
                         <tr{% if dropbox_settings.access_token and not dropbox_settings.latest_sync %} class="alert alert-warning"{% endif %}>
@@ -223,7 +223,7 @@
                         </tr>
                         <tr{% if not weather_settings.track %} class="alert alert-warning"{% endif %}>
                             <td>{% model_meta_info weather_settings 'track' 'verbose_name' %}</td>
-                            <td>{{ weather_settings.track|yesno }}</td>
+                            <td>{% if weather_settings.track %}<i class="fa fa-check"></i>{% else %}<i class="fa fa-times"></i>{% endif %}</td>
                             <td>{% model_meta_info weather_settings 'track' 'help_text' %}</td>
                         </tr>
                         <tr>
