@@ -3,6 +3,7 @@
 
 v0.12 (β) - 2016-xx-xx
 ======================
+- Archive: View past days details (#61).
 -
 
 
